Fixed header on mobile

--- a/blog/static/customStyle.scss
+++ b/blog/static/customStyle.scss
@@ -288,6 +288,11 @@ iframe {
             padding-top: 17px;
             font-size: 0.8em;
         }
+
+        .header-links {
+            padding-top: 17px;
+            font-size: 0.8em;
+        }
     }
 
     #foot {
